<resources>
    <string name="app_name">Constraint Layout</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="bsignin">Sign-In</string>
    <string name="button">Button</string>
    <string name="logo">TODO</string>
    <string name="login">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="string_sign_in">signin</string>
    <string name="tData">Data Anda</string>
    <string name="temail">Email:</string>
    <string name="tpassword">Password:</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
    <string name="name">Name</string>
    <string name="Alamat">Alamat</string>
    <string name="eEmail">Email</string>
    <string name="ePass">Password</string>
    <string name="Btnbatal">Batal</string>
    <string name="Btndaf">Daftar</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="laki_laki">Laki-Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="kristen">Kristen</string>
</resources>